--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "open source project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon app.js --exec babel-node"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,14 @@
   "homepage": "https://github.com/miteshkaliya1/ProjectSupport#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.5.0",
+    "@typescript-eslint/parser": "^2.5.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^6.5.1",
+    "nodemon": "^1.19.4"
   }
 }
